Add production deployment documentation and cleanup unnecessary markdown files
- Add comprehensive Azure deployment guides (PRODUCTION_QUICKSTART.md, AZURE_PRODUCTION_DEPLOYMENT.md)
- Add confusion matrix test results (21 images, 100% recall validated)
- Add presentation charts (7 professional visualizations at 300 DPI)
- Add Confluence-ready research paper (RESEARCH_PAPER_CONFLUENCE.txt)
- Add checkpoint download scripts and Docker production setup
- Remove 19 duplicate/temporary markdown files for cleaner repository
- Remove research paper duplicates (keeping Confluence version only)
- Remove temporary files (FIXES_APPLIED.md, COMMIT_CHECKLIST.md, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -84,5 +84,11 @@ temp/
 .env
 .env.local
 
+# AWS/SSH Keys (SECURITY - Never commit!)
+*.pem
+*.ppk
+*.key
+object-detection-keypair.pem
+
 # SAM3 submodule/clone
 sam3/
